Added a Women's Section and a main page picture and name

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
 
     <header>
-
-
+        <h1> JACKRINSH DRIPZ</h1>
+        <p>Unlease Your Fashion Beast</p>
+        <img src="images/main image.webp" alt="Group of models posing cover photo">
         
     </header>
     <body>
@@ -75,8 +76,7 @@
 
         <section>
             <h2>Women's Section</h2>
-
-            
+            <img src="images/womens section.webp" alt="Picture of woman in suit" height="300" width="200">
             <p>SHOP NOW</p>
 
 
