Added Men's Section in html file.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 
         </section>
         <section>
+            <h2>Men's Section</h2>
+            <img src="images/images.jpg" alt="Picture of a Man" width="15%">
+            <p>Shop Now</p>
 
 
 
