Changed main picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1> JACKRINSH DRIPZ</h1>
         <p>Unlease Your Fashion Beast</p>
-        <img src="images/main image.webp" alt="Group of models posing cover photo">
+        <img src="images/front pic.jpg" alt="Group of models posing cover photo">
         
     </header>
     <body>
