--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
         </section>
 
         <section>
-            <h2>Women's Section</h2>
 
-            
-            <p>SHOP NOW</p>
 
 
 
@@ -213,8 +210,9 @@
 
         </section>
         <section>
-
-
+            <h1>Kids Section</h1>
+            <img src = "images/Kids.jpg" width="200" height="300" alt="images">
+            <p>Shop now</p>
 
 
 
