Updated styles sheet

--- a/index.html
+++ b/index.html
@@ -8,43 +8,42 @@
     </head>
 
     <body>
-        <header>
-            <h1> JACKRINSH DRIPZ</h1>
-            <p>Unlease Your Fashion Beast</p>
-            <img src="images/front pic.jpg" alt="Group of models posing cover photo">
-            
-        </header>
+            <header>
+                <div class="centered-text">
+                    <h1> JACKRINSH DRIPZ</h1>
+                    <p>Unleash Your Fashion Beast</p>
+                </div>
+                    <img src="images/front pic.jpg" alt="Group of models posing cover photo">
+                    
+            </header>
 
-        <section>
+        <div class="flex-container">
+            <section>
 
-            <h2>Women's Section</h2>
-            <img src="images/womens section.webp" alt="Picture of woman in suit" height="300" width="200">
-            <p>SHOP NOW</p>
+                <h2>Women's Section</h2>
+                <img src="images/womens section.webp" alt="Picture of woman in suit" height="300" width="200">
+                <p><a href="https://www.youtube.com/" target="_blank">Shop Now</a></p>
 
-        </section>
+            </section>
 
-        <section>
+            <section>
 
-            <h2>Men's Section</h2>
-            <img src="images/images.jpg" alt="Picture of a Man" width="15%">
-            <p>Shop Now</p>
+                <h2>Men's Section</h2>
+                <img src="images/images.jpg" alt="Picture of a Man" height="300" width="200">
+                <p><a href="https://www.youtube.com/" target="_blank">Shop Now</a></p>
 
-        </section>
+            </section>
 
-        <section>
+            <section>
 
-            <h1>Kids Section</h1>
-            <img src = "images/Kids.jpg" width="200" height="300" alt="images">
-            <p>Shop now</p>
+                <h2>Kid's Section</h2>
+                <img src = "images/Kids.jpg" width="200" height="300" alt="images">
+                <p><a href="https://www.youtube.com/" target="_blank">Shop Now</a></p>
 
-        </section>
-
-        <footer>
-
-
-
-
-
-        </footer>
+            </section>
+        </div>
+            <footer>
+                <p> Thanks for shopping! See you next time.</p>
+            </footer>
     </body>
 </html>
